--- a/App/static/css/forTurnTheTassel.less
+++ b/App/static/css/forTurnTheTassel.less
@@ -33,6 +33,15 @@ ul{
   .turnTheTassel-top{
     width: 100%;
     height: 33vh;
+    .beforeAct{
+      >div{
+        width: 100px;
+        img{
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
   }
   .turnTheTassel-center{
     flex: 1;
