--- a/App/static/css/forTurnTheTassel.css
+++ b/App/static/css/forTurnTheTassel.css
@@ -37,13 +37,42 @@ ul li {
   width: 100%;
   height: 33vh;
 }
+.turnTheTassel .turnTheTassel-topB{
+  height: 13vh;
+}
+.turnTheTassel .turnTheTassel-top .beforeAct{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.turnTheTassel .turnTheTassel-top >div >div{
+  margin: 8px 16px;
+}
+.turnTheTassel .turnTheTassel-top >div >div:nth-child(1){
+  height: 90px;
+}
+.turnTheTassel .turnTheTassel-top >div >div:nth-child(2){
+  height: 30px;
+}
+.turnTheTassel .turnTheTassel-top >div >div:nth-child(3){
+  height: 40px;
+}
+.turnTheTassel .turnTheTassel-top >div >div img{
+  width: 100%;
+  height: 100%;
+}
+.turnTheTassel .turnTheTassel-top .afterAct{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .turnTheTassel .turnTheTassel-center {
   flex: 1;
   position: relative;
 }
 .turnTheTassel .turnTheTassel-center .turnTheTassel-center-template {
   margin: auto;
-  width: 950px;
+  width: 1200px;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -61,8 +90,8 @@ ul li {
   position: relative;
   width: 158px;
   height: 230px;
-  margin: 4px 16px;
-  overflow: hidden;
+  margin: 0px 32px 28px 24px;
+
   box-sizing: border-box;
   border: 0px;
   transition-property: border;
@@ -103,16 +132,29 @@ ul li {
   position: absolute;
   left: 10%;
   top: 35%;
-  width: 15px;
+  width: 8%;
 }
 .turnTheTassel .turnTheTassel-center .turnTheTassel-center-template .template-group .specialOne {
   align-self: center;
-  width: 285px;
-  height: 400px;
+  width: 265px;
+  height: 380px;
 }
 .turnTheTassel .turnTheTassel-bottom {
   width: 100%;
   height: 16vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.turnTheTassel .turnTheTassel-bottom >div img{
+  width: 100%;
+  height: 100%;
+}
+.turnTheTassel .turnTheTassel-bottom >div{
+  height: 45px;
+}
+.turnTheTassel .turnTheTassel-bottom >div:nth-child(2){
+  height: 100px;
 }
 .student_info {
   position: absolute;
@@ -121,17 +163,18 @@ ul li {
   width: 100%;
   height: 0px;
   z-index: 99;
-  transform: translateX(-50%);
-  background: linear-gradient(to top, #000000, rgba(0, 0, 0, 0.516), rgba(0, 0, 0, 0));
-  color: #fff;
+  transform: translate(-50%,103%);
+  color: #FFF6B8;
+  font-family: "鸿雁手写";
   text-align: center;
   opacity: 0;
   transition-property: opacity,height;
   transition-duration: 1s;
+  font-size: 24px;
 }
 .student_info .student_info_name {
   font-weight: 700;
-  font-size: 20px;
+  font-size: 28px;
 }
 .student_info_show {
   height: auto;
@@ -179,7 +222,7 @@ ul li {
   60% {
     left: 45%;
     top: 0%;
-    transform: rotate3d(0, 0, 1, 20deg);
+    transform: rotate3d(0, 0, 1, 30deg);
   }
   70% {
     left: 62%;
@@ -205,7 +248,7 @@ ul li {
 .template-swiper {
   overflow: hidden;
   width: 100%;
-  height: 480px;
+  height: 680px;
   position: relative;
 }
 .template-swiper ul {
@@ -219,7 +262,7 @@ ul li {
 }
 .template-swiper ul li {
   width: 100%;
-  height: 480px;
+  height: 680px;
 }
 .class_page {
   margin-top: 80px;
@@ -233,16 +276,24 @@ ul li {
 .class_page .class_page_desc {
   width: 100%;
   color: white;
+  transform: scale(2);
+  font-family: "鸿雁手写";
 }
 .class_page .class_pagae_button {
-  width: 300px;
-  height: 60px;
+  /* width: 300px;
+  height: 60px; */
+  width: 50px;
+  height: 50px;
   margin: auto;
-  background: linear-gradient(45deg, orange, rgba(255, 166, 0, 0.301));
+  /* background: linear-gradient(45deg, orange, rgba(255, 166, 0, 0.301)); */
   text-align: center;
   line-height: 60px;
   color: #fff;
   font-weight: 700;
   font-size: 20px;
   cursor: pointer;
+}
+.class_page .class_pagae_button >img{
+  width: 100%;
+  height: 100%;
 }
